[package]
name = "vvspeech"
version = "0.1.0"
edition = "2021"
description = "A tool to communicate with the VOICEVOX (or other) engine to retrieve audio queries and audio files for playback and save"

[dependencies]
anyhow = "1.0.68"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.0.32", features = ["derive"] }
rodio = "0.16.0"
serde = "1.0.152"
serde_json = "1.0.91"
surf = "2.3.2"
thiserror = "1.0.38"
