[package]
name = "vvspeech"
version = "0.1.0"
edition = "2021"
description = "A tool to communicate with the VOICEVOX (or other) engine to retrieve audio queries and audio files for playback and save"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
rodio = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0.38"
